[package]
name = "daily-seconds-kline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
csv = "1.3.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.204", features = ["serde_derive"]}
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }